--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello! I am Kaustubh
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>n1kchik0</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+  </head>
+  <body>
+    <h1>Hello there! Good to see you here</h1>
+    <hr><br>
+    <div id="typed-strings">
+      <p>Hey! I am Kaustubh^500</p>
+      <p>You've finally arrived here.^700 I was expecting you^500</p>
+      <p>I know you like this page... ^1000 I do too</p>
+      <p>But <italic>this</italic> is all it can do for now...^400</p>
+      <p>But <italic>this</italic> is all it can do for now. I know ://</p>
+      <p>If you're looking to get in touch with me,</p>
+      <p>If you're looking to get in touch with the actual me,^400 find me on Telegram <a href="https://t.me/nikochiko">@nikochiko</a></p>
+      <p>Or just email me on <a href="mailto:ktvm42@gmail.com">ktvm42@gmail.com</a></p>
+      <p>Though of course, you can stay here and enjoy this animation ^500 (spoiler alert: it's a forever loop!)</p>
+    </div>
+    <span id="typed"></span>
+    <script>
+      var typed = new Typed('#typed', {
+        stringsElement: '#typed-strings',
+        typeSpeed: 60,
+        backSpeed: 10,
+        loop: true
+      });
+    </script>
+    <br><br><br>
+    <div id="box">
+      <p>Telegram: <a href="https://t.me/nikochiko">@nikochiko</a></p>
+      <p>Email: <a href="mailto:ktvm42@gmail.com">ktvm42@gmail.com</a></p>
+    </div>
+  </body>
+</html>
