--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
       <p>Hey! I am Kaustubh^500</p>
       <p>You've finally arrived here.^700 I was expecting you^500</p>
       <p>I know you like this page... ^1000 I do too</p>
-      <p>But <italic>this</italic> is all it can do for now...^400</p>
-      <p>But <italic>this</italic> is all it can do for now. I know ://</p>
+      <p>But <italic>this</italic> is all it can do for now...^400 I know ://</p>
       <p>If you're looking to get in touch with me,</p>
       <p>If you're looking to get in touch with the actual me,^400 find me on Telegram <a href="https://t.me/nikochiko">@nikochiko</a></p>
       <p>Or just email me on <a href="mailto:ktvm42@gmail.com">ktvm42@gmail.com</a></p>
