Add content and fix typo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>n1kchik0</title>
+    <title>n1k0ch1k0</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
   </head>
@@ -81,8 +81,11 @@
         </script>
         <div class="my-info">
           <p>I am Kaustubh Maske Patil, aka <b>nikochiko</b></p>
-          <p>I love play around with code, building small tools to do stuff, yada yada</p>
-          <p>I like to watch anime and read/watch random interesting stuff</p>
+          <p>I love playing around with public APIs and building custom tools to grab interesting data.</p>
+          <p>One of my hobbies is building tiny Telegram bots that make life a little bit smoother</p>
+          <p>The <a href="https://t.me/WhoCameByBot">WhoCameByBot</a> above is tiny and cool. I also created a bridge bot which can help communicate anonymously.</p>
+          <p>Almost all my projects are open-sourced, so you can check that out and more good stuff on <a href="https://github.com/nikochiko">my GitHub</a></p>
+          <p>Apart from that, I like to watch anime and read/watch random interesting stuff</p>
           <p>More content to be added... Very soon...</p>
         </div>
       </div>
