--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
   </head>
   <body>
-    <h1>h3ll0 $y0urn4m3! 600d 70 533 y0u h3r3</h1>
+    <h1 class="heading">&lt;Nikochiko&gt;</h1>
     <hr><br>
     <div id="typed-strings">
       <p>Hey! I am Kaustubh^500</p>
-      <p>You've finally arrived here.^700 I was expecting you^500</p>
-      <p>I know you like this page... ^1000 I do too</p>
-      <p>But <italic>this</italic> is all it can do for now...^400 I know ://</p>
+      <p>Good to see you here :D</p>
+      <p></p>
       <p>If you're looking to get in touch with me</p>
       <p>If you're looking to get in touch with the actual me,^400 find me on Telegram <a href="https://t.me/nikochiko">@nikochiko</a></p>
       <p>Or just email me on <a href="mailto:ktvm42@gmail.com">ktvm42@gmail.com</a></p>
@@ -30,8 +29,17 @@
       });
     </script>
     <br><br>
-
-    <h2>Send me a message</h2>
+    <div class="know-me" id="know-me">
+      <h2 class="heading">Know me</h2>
+      <div class="my-info">
+        <p>I am Kaustubh Maske Patil, aka <b>nikochiko</b></p>
+        <p>I love playing around with public APIs and building custom tools to grab interesting data.</p>
+        <p>Almost all my projects are open-sourced, so you can check that out on <a href="https://github.com/nikochiko">my GitHub</a></p>
+        <p>Apart from that, I like to watch anime and read/watch random interesting stuff</p>
+        <p>More content to be added... Very soon...</p>
+      </div>
+    </div>
+    <h2 class="heading">Drop me a quick message</h2>
     <p>
       This is the <a href="https://t.me/WhoCameByBot">WhoCameByBot</a> taking over.
       I can let Kaustubh know that you came by
@@ -61,16 +69,6 @@
       visitorTextBtn.addEventListener('click', visitorBtnHandler, false);
     </script>
     <!-- <br><br><br> -->
-    <h2>Know me</h2>
-    <div class="know-me" id="know-me">
-      <div class="my-info">
-        <p>I am Kaustubh Maske Patil, aka <b>nikochiko</b></p>
-        <p>I love playing around with public APIs and building custom tools to grab interesting data.</p>
-        <p>Almost all my projects are open-sourced, so you can check that out on <a href="https://github.com/nikochiko">my GitHub</a></p>
-        <p>Apart from that, I like to watch anime and read/watch random interesting stuff</p>
-        <p>More content to be added... Very soon...</p>
-      </div>
-    </div>
     <br><br><br>
     <div id="box">
       <p>Telegram: <a href="https://t.me/nikochiko">@nikochiko</a></p>
