--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         loop: true
       });
     </script>
-    <br><br>
-    <div class="know-me" id="know-me">
+    <div class="container" id="know-me">
       <h2 class="heading">Know me</h2>
       <div class="my-info">
         <p>I am Kaustubh Maske Patil, aka <b>nikochiko</b></p>
@@ -68,8 +67,6 @@
       };
       visitorTextBtn.addEventListener('click', visitorBtnHandler, false);
     </script>
-    <!-- <br><br><br> -->
-    <br><br><br>
     <div id="box">
       <p>Telegram: <a href="https://t.me/nikochiko">@nikochiko</a></p>
       <p>Email: <a href="mailto:ktvm42@gmail.com">ktvm42@gmail.com</a></p>
