--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1 class="heading">&lt;Nikochiko&gt;</h1>
     <hr><br>
     <div id="typed-strings">
-      <p>Hey! I am Kaustubh^500</p>
-      <p>Good to see you here :D</p>
+      <p>Hey! I am Kaustubh!^500</p>
+      <p>Hey! I am Kaustubh! Good to see you here :D</p>
       <p></p>
       <p>If you're looking to get in touch with me</p>
       <p>If you're looking to get in touch with the actual me,^400 find me on Telegram <a href="https://t.me/nikochiko">@nikochiko</a></p>
