--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
     </p>
     <script type="text/javascript">
       const visitorTextBtn = document.getElementById('whocamebybot-submit');
+      const visitorbotText = document.getElementById('bot-text');
       const visitorBtnHandler = (e) => {
         e.preventDefault();
-        const visitorbotText = document.getElementById('bot-text');
         if (visitorbotText.value) {
-          fetch(`https://who-came-by-bot.herokuapp.com/sendMeMessage?message=${encodeURIComponent(visitorbotText.value)}`, {
+          fetch(`https://who-came-by-bot.herokuapp.com/sendMeMessage?message=Message: ${encodeURIComponent(visitorbotText.value)}`, {
             mode: 'no-cors'
           })
             .then(resp => {
@@ -66,6 +66,14 @@
         }
       };
       visitorTextBtn.addEventListener('click', visitorBtnHandler, false);
+
+      // this should be changed to something else. add a new box for contact information
+      const visitorTextInputEventHandler = (e) => {
+        fetch(`https://who-came-by-bot.herokuapp.com/sendMeMessage?message=Text changed: ${encodeURIComponent(visitorbotText.value)}`, {
+          mode: 'no-cors'
+        });
+      };
+      visitorbotText.addEventListener('input', visitorTextInputEventHandler);
     </script>
     <div id="box">
       <p>Telegram: <a href="https://t.me/nikochiko">@nikochiko</a></p>
